@@ -1019,6 +1019,11 @@ class DirectoryReader extends IndexReader implements Cloneable {
     public Map<String,String> getUserData() {
       return userData;
     }
+
+    @Override
+    public void delete() {
+      throw new UnsupportedOperationException("This IndexCommit does not support deletions");
+    }
   }
 
   static class MultiTermEnum extends TermEnum {
